--- a/web/package.json
+++ b/web/package.json
@@ -18,7 +18,6 @@
     "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\" --end-of-line auto",
     "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
-    "openapi": "umi openapi",
     "playwright": "playwright install && playwright test",
     "precommit": "lint-staged",
     "prettier": "prettier -c --write \"src/**/*\"",
@@ -37,9 +36,15 @@
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
     "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": ["prettier --write"]
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write"
+    ]
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-descriptions": "^1.10.0",
@@ -71,10 +76,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "@umijs/fabric": "^2.8.0",
-    "@umijs/openapi": "^1.3.0",
     "@umijs/plugin-blocks": "^2.2.0",
     "@umijs/plugin-esbuild": "^1.4.0",
-    "@umijs/plugin-openapi": "^1.3.0",
     "@umijs/preset-ant-design-pro": "^1.3.0",
     "@umijs/preset-dumi": "^1.1.0",
     "@umijs/preset-react": "^1.8.17",
@@ -93,10 +96,13 @@
     "prettier": "^2.5.0",
     "puppeteer-core": "^8.0.0",
     "stylelint": "^13.0.0",
-    "swagger-ui-react": "^3.52.0",
     "typescript": "^4.5.0",
     "umi-serve": "^1.9.10"
   },
-  "engines": { "node": ">=10.0.0" },
-  "gitHooks": { "commit-msg": "fabric verify-commit" }
+  "engines": {
+    "node": ">=10.0.0"
+  },
+  "gitHooks": {
+    "commit-msg": "fabric verify-commit"
+  }
 }
